df-derive/tests/fail/124-fail-as-binary-on-tuple.stderr
error: field `pair` has `as_binary` but its type is a tuple; field-level attributes do not apply to multi-column tuple fields. Hoist the tuple into a named struct that derives `ToDataFrame` if you need per-element attributes.
 --> tests/fail/124-fail-as-binary-on-tuple.rs:7:17
  |
7 |     #[df_derive(as_binary)]
  |                 ^^^^^^^^^
